--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -4,7 +4,8 @@
   -->
 
 <network-security-config>
-    <domain-config cleartextTrafficPermitted="true">
-        <domain includeSubdomains="true">http://3.89.138.187</domain>
-    </domain-config>
+<!--    <domain-config cleartextTrafficPermitted="true">-->
+<!--        <domain includeSubdomains="true">http://192.168.43.236</domain>-->
+<!--    </domain-config>-->
+    <base-config cleartextTrafficPermitted="true" />
 </network-security-config>
