--- a/app/src/main/res/layout/item_dashboard_feed_category_item.xml
+++ b/app/src/main/res/layout/item_dashboard_feed_category_item.xml
@@ -14,13 +14,16 @@
         <ImageView
             android:id="@+id/imgCover"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:clickable="true"
+            android:focusable="true"
+            android:foreground="?selectableItemBackground"/>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/black"
-            android:alpha="0.6"
+            android:alpha="0.5"
             />
 
         <TextView
