--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -7,8 +7,8 @@
     <item android:id="@+id/home"
         android:title="@string/home"
         android:icon="@drawable/dashboard_menu_item_home" />
-    <item android:id="@+id/categories"
-        android:title="@string/categories"
+    <item android:id="@+id/catalog"
+        android:title="@string/catalog"
         android:icon="@drawable/dashboard_menu_item_categories" />
     <item android:id="@+id/cart"
         android:title="@string/cart"
