--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -95,7 +95,7 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnLogin"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_buttons"
@@ -105,11 +105,7 @@
         android:text="@string/login"
         android:textAllCaps="false"
         android:background="@drawable/btn_agrimart_green"
-        app:initialCornerAngle="8dp"
         android:textColor="@color/white"
-        app:spinning_bar_color="@color/white"
-        app:spinning_bar_padding="8dp"
-        app:spinning_bar_width="4dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtPasswordLayout"
