--- a/app/src/main/res/layout/fragment_password_reset.xml
+++ b/app/src/main/res/layout/fragment_password_reset.xml
@@ -119,7 +119,7 @@
 
     </AutoCompleteTextView>
 
-    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnSubmit"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_buttons"
@@ -129,11 +129,7 @@
         android:text="@string/change_password"
         android:textAllCaps="false"
         android:background="@drawable/btn_agrimart_green"
-        app:initialCornerAngle="8dp"
         android:textColor="@color/white"
-        app:spinning_bar_color="@color/white"
-        app:spinning_bar_padding="8dp"
-        app:spinning_bar_width="4dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtConfirmPassword"
